# AOEOverlay

./: .complexity-log.md  .gitignore  CHANGELOG.md  CODE_SIGNING.md  README.md  WINDOWS_WEBVIEW2_VISIBILITY_BUG.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  run-dev.ps1  tailwind.config.js  vitest.config.ts
.github/workflows/: release.yml  test.yml
.plugin-config/: hook-complexity-monitor.json
docs/: ARCHITECTURE.md  BUILD-ORDERS.md  FEATURES.md  OVERLAY-IMPROVEMENTS.md  RESEARCH.md  ROADMAP.md  aoe4-overlay-spec.md
docs/plans/: 2025-01-10-settings-redesign.md  2025-12-05-overlay-voice-coaching-design.md  2026-06-03-overlay-improvements.md
public/build-orders/: chinese-zhuge-nu-rush.json  english-longbow-rush.json  french-knight-rush.json  hre-fast-castle.json  mongols-tower-rush.json
scripts/: convert-age4builder.ts  test-input.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  config.rs  error.rs  hotkeys.rs  lib.rs  main.rs  platform.rs  state.rs  tray.rs  tts.rs
src-tauri/src/commands/: build_order.rs  config_commands.rs  mod.rs  ui.rs  window.rs
src-tauri/src/config/: app_config.rs  build_order.rs  mod.rs  persistence.rs
src-tauri/src/windows/: game_detection.rs  mod.rs  setup.rs
src/data/: index.ts  matchups.ts  units.ts
src/hooks/: index.ts  useAdjustedTiming.ts  useAutoResize.ts  useBoundedQueue.ts  useBuildOrderDialogs.ts  useBuildOrderFiltering.ts  useBuildOrderSync.ts  (+19 more)
tests/: app.spec.ts
(+195 files in other folders)
